2005-05-19  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/log.py (logger): another Jonathan Ellis patch: adding
	default handler to logger.

	* src/PyDO2/drivers/psycopgconn.py (PsycopgDBI.describeTable):
	from patch by Jonathan Ellis, implementation of describeTable().

	* src/PyDO2/dbi.py (DBIBase.describeTable): docstring patch
	from Jonathan Ellis (lightly edited) documenting his change to the
	return value of this function.

2005-05-12  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/__init__.py (__version__): upping to 2.0a2.

2005-05-12  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/base.py (PyDO.project): projections with schemas were
	broken (the schema got added twice).  Fixed.
	(PyDO.getTable): now takes a withSchema parameter, defaulting to
	True (useful for projection fix).

2005-05-11  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document PyDO._create_field.

	* src/PyDO2/base.py (PyDO.newfetch, PyDO.newnofetch): brown bag
	typo fix: was missing @classmethod for these two methods, which
	hence did not work.
	(PyDO._create_field): now delegate Field instance creation in the
	metaclass to a static method in PyDO.

2005-05-10  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/examples/pim.py: removed refetchs and table attributes,
	added a couple of comments.
	
2005-05-10  Jacob Smullyan  <smulloni@smullyan.org>

	* setup.py (classifiers): little improvements to setup.py.

2005-05-09  Jacob Smullyan <smulloni@smullyan.org>
	* cut release PyDO-2.0a1.

2005-05-06  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/base.py (PyDO._joinTableSQL): fixed to use getTable().
	(PyDO): now support schema name in a separate schema attribute,
	and permit table name to be guessed from class name if
	_guess_tablename is True (as it is by default).
	(PyDO.new): moved the implementation of new to a new method, _new,
	which moves fieldData from kwargs to a dictionary.  The only